# FinSense

./: .gitignore  CAPSTONE_DEMO_READY.md  CAPSTONE_PRESENTATION_GUIDE.md  COMPLETE_SYSTEM_SUMMARY.md  DASHBOARD_README.md  DEPLOYMENT_STATUS.md  FINAL_DASHBOARD_COMPLETE.md  FINAL_RESULTS_450EP.md  GEMINI_FRONTEND_BRIEF.md  HONEST_CRITIQUE_AND_IMPROVEMENTS.md  HOW_TO_TRAIN.md  IMPLEMENTATION_STATUS.md  JS_FRAMEWORK_ANALYSIS.md  PAPER_TRADING_GUIDE.md  PAPER_TRADING_ROADMAP.md  PREMIUM_DASHBOARD_READY.md  PRESENTATION_GUIDE_ULTIMATE.md  PRESENTATION_READY.sh  QUICK_START.md  README.md  SKILLS-GUIDE.md  SPIKE_REBRAND_COMPLETE.md  TECH_MODERNIZATION_PLAN.md  TEST_INSTRUCTIONS.md  TEST_SET_FAILURE_ANALYSIS.md  TEST_SPIKE_TERMINAL.md  TRAINING_ANALYSIS_300EP.md  check_q_values.py  comprehensive_ppo_eval.py  config.yaml  evaluate.py  evaluate_groww_test.py  evaluate_intra_torch2.py  evaluate_multistock.py  evaluate_ppo.py  groww_config_template.json  live_trade.py  manual_eval.py  monitor_50ep.sh  monitor_training.py  (+17 more)
agents/: __init__.py  base_agent.py  dqn_agent.py  ppo_agent.py  ppo_memory.py  ppo_trainer.py
dashboard/: app.py  app_debug.py  app_fastapi.py
spike-platform/apps/api/: .env  README.md  pyproject.toml
spike-platform/apps/api/app/: main.py
spike-platform/apps/api/app/api/v1/: router.py
spike-platform/apps/api/app/api/v1/endpoints/: __init__.py  ai.py  auth.py  finscore.py  market.py  portfolio.py  stocks.py  themes.py  watchlist.py  websocket.py
spike-platform/apps/api/app/core/: config.py
spike-platform/apps/api/app/db/: session.py
spike-platform/apps/api/app/models/: __init__.py  portfolio.py  user.py  watchlist.py
spike-platform/apps/api/app/services/: angel_one.py  cache.py  market_data.py
spike-platform/apps/api/scripts/: init_db.py
(+250 files in other folders)
